[package]
name = "bloom-server"
version = "1.36.0"
description = "HTTP REST API caching middleware, to be used between load balancers and REST API workers."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/bloom"
repository = "https://github.com/valeriansaliou/bloom.git"
keywords = ["proxy", "http", "api", "rest", "cache"]
categories = ["caching", "web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "bloom"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"] }
toml = "0.9"
clap = { version = "4.5", features = ["std", "cargo"] }
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
httparse = "1.3"
r2d2 = "0.8"
r2d2_redis = "0.14"
redis = "0.20"
farmhash = "1.1"
brotli = "8.0"
rand = "0.9"
unicase = "2.6"
regex = "1.8"
itertools = "0.14"

tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
http = "1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
strip = true
