[package]
name = "bloom-server"
version = "1.38.0"
description = "HTTP REST API caching middleware, to be used between load balancers and REST API workers."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/bloom"
repository = "https://github.com/valeriansaliou/bloom.git"
keywords = ["proxy", "http", "api", "rest", "cache"]
categories = ["caching", "web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "bloom"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"] }
toml = "1.1"
clap = { version = "4.5", features = ["std", "cargo"] }
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
time-format = "1.2"
httparse = "1.3"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
farmhash = "1.1"
zstd = "0.13"
rand = "0.10"
bytes = "1.11"
regex = "1.8"
itertools = "0.14"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
strip = true
